# fhl-flaskexample

./: app.py  pyproject.toml  requirements.txt
.github/workflows/: main_fhl-flaskexample.yml
metrics/: ABTaskCancelRate.txt  ABTaskE2ETime.txt  DebugInfo_FailedAndCancelledABTasks.txt  UserErrorExcludedABTaskFailureRate.txt
templates/: base.html  chart.html  index.html  jobcounts.html  jobtokens.html  landing.html  latency.html  table.html
